--- a/MUSKI/bras.html
+++ b/MUSKI/bras.html
@@ -22,7 +22,7 @@
     <div class="page-content">
         <div class="content-section section-texte-droite">
             <div class="illustration-colonne">
-                <img src="https://4kwallpapers.com/images/wallpapers/goku-amoled-super-2048x2048-12116.png" alt="Schéma d'anatomie du bras" style="border-radius: 8px;">
+                <img src="./images/goku bras.webp" alt="Schéma d'anatomie du bras" style="border-radius: 8px;">
             </div>
             <div class="text-colonne">
                 <h1>Bienvenue à l'entraînement de Goku</h1>
@@ -84,7 +84,7 @@
 
         <div class="content-section section-texte-droite">
             <div class="illustration-colonne">
-                <img src="https://images.ctfassets.net/8urtyqugdt2l/1PIByDli3n2P6qBfanE7CU/10a731af0b2ca0854535514ed0911f37/Anatomy-Graphics-French-Translation-Biceps.png" alt="Schéma des biceps (Gymshark)" style="border-radius: 8px;">
+                <img src="./images/gymshark bras.webp" alt="Schéma des biceps (Gymshark)" style="border-radius: 8px;">
             </div>
 
             <div class="text-colonne">
