--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -22,7 +22,7 @@
 
         <div class="content-section section-texte-gauche">
             <div class="illustration-colonne">
-                <img src="https://i1.sndcdn.com/artworks-fZCZuf1AwrqfKz4X-DyqInA-t500x500.jpg" alt="Illustration générale du Buste">
+                <img src="./images/broly.webp" alt="Illustration générale du Buste">
             </div>
             <div class="text-colonne">
                 <h1>Bienvenue aux abysses du pouvoir...</h1>
@@ -52,7 +52,7 @@
 
         <div class="content-section section-texte-gauche">
             <div class="illustration-colonne">
-                <img src="https://static.wikia.nocookie.net/character-level/images/f/f5/Broly_legendary_ssj_by_andrewdragonball_dctctj9-pre.png/revision/latest/scale-to-width-down/350?cb=20200112042805" alt="Schéma des groupes musculaires du buste">
+                <img src="./images/broly 2 (1).webp" alt="Schéma des groupes musculaires du buste">
             </div>
             <div class="text-colonne">
                 <h2>Protection et Groupes Musculaires</h2>
