--- a/MUSKI/epaules.html
+++ b/MUSKI/epaules.html
@@ -21,7 +21,7 @@
     <div class="page-content">
         <div class="content-section section-texte-droite">
             <div class="illustration-colonne">
-                <img src="https://i.pinimg.com/originals/07/10/1f/07101fbac4bba1cd3bb64a5c4771f0e8.png" alt="Schéma d'anatomie de l'épaule" style="border-radius: 8px;">
+                <img src="./images/trunks nrv.webp" alt="Schéma d'anatomie de l'épaule" style="border-radius: 8px;">
             </div>
             <div class="text-colonne">
                 <h1>Bienvenue dans la ville future !</h1>
@@ -45,7 +45,7 @@
 
         <div class="content-section section-texte-gauche">
             <div class="illustration-colonne">
-                <img src="https://static.wikia.nocookie.net/perfect-power-level-list/images/5/5f/SS_Grade_2_Future_Trunks.png/revision/latest?cb=20190215170108" alt="Illustration des exercices pour les épaules" style="border-radius: 8px;">
+                <img src="./images/trunks arvv.webp" alt="Illustration des exercices pour les épaules" style="border-radius: 8px;">
             </div>
             <div class="text-colonne">
                 <h2>Comment muscler ses épaules ?</h2>
