--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -36,7 +36,7 @@
 
             <!-- MUSCLES CLIQUABLES -->
             <a href="bras.html">
-                <img src="./images/bras.png" class="muscle bras">
+                <img src="./images/bras.webp" class="muscle bras">
             </a>
             
             <a href="epaules.html">
