ajout du favicon0

--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Découvrez l'anatomie complète du buste (abdos, lombaires, fessiers) et leur rôle crucial dans la stabilité et la force. Trouvez les exercices clés pour le gainage.">
     <link id="theme" rel="stylesheet" href="styles/style_noir.css">
+    <link rel="icon" href="./images/favicon0.png">
     <script src="bouton.js"></script>
 </head>
 <body>
