--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -12,9 +12,9 @@
 
 <header class="header">
     <nav class="navbar">
-        <a href="index.html">ACCUEIL</a>
-        <img src="./images/logo.png" class="logo">
-        <a href="contact.html">CONTACT</a>
+        <a href="index.html" class="link">ACCUEIL</a>
+        <img src="./images/logo.png" alt="Logo de Muski" class="logo">
+        <a href="contact.html" class="link">CONTACT</a>
     </nav>
 </header>
 
@@ -32,27 +32,27 @@
         <div class="cadre">
             
             <!-- Image de base -->
-            <img src="./images/goku.png" class="base">
+            <img src="./images/goku.png" alt="Image de Goku" class="base">
 
             <!-- MUSCLES CLIQUABLES -->
             <a href="bras.html">
-                <img src="./images/bras.png" class="muscle bras">
+                <img src="./images/bras.png" alt="Muscle des bras" class="muscle bras">
             </a>
             
             <a href="epaules.html">
-                <img src="./images/épaules0.png" class="muscle epaules">
+                <img src="./images/épaules0.png" alt="Muscle des épaules" class="muscle epaules">
             </a>
 
             <a href="jambes.html">
-                <img src="./images/jambes.png" class="muscle jambes">
+                <img src="./images/jambes.png" alt="Muscle des jambes" class="muscle jambes">
             </a>
 
             <a href="buste.html">
-                <img src="./images/buste.png" class="muscle buste">
+                <img src="./images/buste.png" alt="Muscle du buste" class="muscle buste">
             </a>
 
             <a href="cardio.html">
-                <img src="./images/cardios.png" class="muscle cardio">
+                <img src="./images/cardios.png" alt="Muscle du cardio" class="muscle cardio">
             </a>
 
         </div>
@@ -68,16 +68,7 @@
                 <p>Privacy Terms</p>
             </div>
             <div class="text-colonne">
-                <h3>Entraînements</h3>
-                <ul>
-                    <li><a href="bras.html" class="footer-link">Les Bras</a></li>
-                    <li><a href="jambes.html" class="footer-link">Les Jambes</a></li>
-                    <li><a href="epaules.html" class="footer-link">Les Épaules</a></li>
-                    <li><a href="cardio.html" class="footer-link">Le Cardio</a></li>
-                </ul>
-            </div>
-            <div class="text-colonne">
-                <h3>Fondateurs</h3>
+                <h2>Fondateurs</h2>
                 <ul>
                     <li>Kenzi Yacini</li>
                     <li>Milann Becherini</li>
@@ -85,14 +76,15 @@
                 </ul>
             </div>
             <div class="text-colonne">
-                <h3>Sécurité</h3>
+                <h2>Sécurité</h2>
                 <ul>
                     <li>Responsabilité</li>
                 </ul>
             </div>
             <div class="text-colonne">
-                <h3>Fonctionnalités</h3>
-                <p><a href="#top" class="footer-link" title="Revenir en haut de page">Revenir en haut</a></p>
+                <h2>Fonctionnalités</h2>
+                <p><a href="#top" class="link" title="Revenir en haut de page">Revenir en haut</a></p>
+                <br>
                 <p><button id="toggle-theme" class="button">Changer de thème</button></p>
             </div>
         </div>
