--- a/MUSKI/jambes.html
+++ b/MUSKI/jambes.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="description" content="Guide essentiel pour le 'Leg Day' : Anatomie des jambes, principes de base (squat, soulevé de terre), erreurs courantes et conseils nutritionnels pour la récupération.">
     <link id="theme" rel="stylesheet" href="styles/style_noir.css">
-    <script src="bouton.js"></script>
+    <script src="js/bouton.js" defer></script>
 </head>
 <body>
     <header class="header">
         <div class="nav-container">
-            <a href="index.html" class="nav-link">ACCUEIL</a>
+            <a href="index.html" class="link-button">ACCUEIL</a>
             <div class="logo">
                 <img src="./images/logo.png" alt="Muski logo">
             </div>
-            <a href="contact.html" class="nav-link">CONTACT</a>
+            <a href="contact.html" class="link-button">CONTACT</a>
         </div>
     </header>
 
@@ -151,8 +151,8 @@
 
         <h2>Sources</h2>
         <ul>
-            <li><a href="https://examine.com/">Examine.com</a> – Base de données scientifique sur la nutrition et les suppléments.</li>
-            <li><a href="https://www.strengthlog.com/">StrengthLog</a> – Programmes et explications d’exercices validés par des coachs certifiés NSCA.</li>
+            <li><a href="https://examine.com/" class="link">Examine.com</a> – Base de données scientifique sur la nutrition et les suppléments.</li>
+            <li><a href="https://www.strengthlog.com/" class="link">StrengthLog</a> – Programmes et explications d’exercices validés par des coachs certifiés NSCA.</li>
         </ul>
     </div>
     <footer class="header">
@@ -161,15 +161,6 @@
                 <p>MUSKI</p>
                 <p>@2025</p>
                 <p>Privacy Terms</p>
-            </div>
-            <div class="text-colonne">
-                <h3>Entraînements</h3>
-                <ul>
-                    <li><a href="bras.html" class="footer-link">Les Bras</a></li>
-                    <li><a href="jambes.html" class="footer-link">Les Jambes</a></li>
-                    <li><a href="epaules.html" class="footer-link">Les Épaules</a></li>
-                    <li><a href="cardio.html" class="footer-link">Le Cardio</a></li>
-                </ul>
             </div>
             <div class="text-colonne">
                 <h3>Fondateurs</h3>
@@ -187,8 +178,8 @@
             </div>
             <div class="text-colonne">
                 <h3>Fonctionnalités</h3>
-                <p><a href="#top" title="Revenir en haut de page">Revenir en haut</a></p>
-                <p><button onclick="changerStyle()">Changer le style</button></p>
+                <p><a href="#top" class="link-button" title="Revenir en haut de page">Revenir en haut</a></p>
+                <p><button id="toggle-theme" class="button">Changer de thème</button></p>
             </div>
         </div>
     </footer>
