--- a/MUSKI/cardio.html
+++ b/MUSKI/cardio.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Maîtrisez les machines de cardio ergométriques : Skierg, Rower, Bike Erg et Echobike. Guide détaillé des techniques et astuces de pro pour maximiser votre effort.">
     <link id="theme" rel="stylesheet" href="styles/style_noir.css">
-    <link rel="icon" href="./images/favicon0.png">
+    <link rel="icon" href="./images/favicon0.webp">
     <script src="bouton.js"></script>
 </head>
 <body>
