--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -5,7 +5,7 @@
     <title>Muski</title>
     <meta name="description" content="Muski : Le wiki interactif des meilleurs exercices de musculation. Cliquez sur le muscle que vous voulez cibler (bras, épaules, jambes, buste) pour des entraînements efficaces.">
     <link rel="stylesheet" href="styles/accueil.css">
-    <link rel="icon" href="./images/favicon0.png">
+    <link rel="icon" href="./images/favicon0.webp">
     <script src="js/bouton.js" defer></script>
 </head>
 
