--- a/MUSKI/bras.html
+++ b/MUSKI/bras.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Guide complet pour muscler les bras. Anatomie des triceps (longue portion, vaste externe) et des biceps. Conseils et tableaux d'exercices pour le volume et la force.">
     <link rel="stylesheet" href="styles/style_noir.css">
-    <link rel="icon" href="./images/favicon0.png">
+    <link rel="icon" href="./images/favicon0.webp">
     <script src="js/bouton.js" defer></script>
 </head>
 <body>
