--- a/MUSKI/contact.html
+++ b/MUSKI/contact.html
@@ -5,7 +5,7 @@
     <title>Muski - Contact</title>
     <meta name="description" content="Contactez l'équipe Muski pour donner vos impressions sur le site, poser des questions ou envoyer des suggestions.">
     <link id="theme" rel="stylesheet" href="styles/style_noir.css">
-    <link rel="icon" href="./images/favicon0.png">
+    <link rel="icon" href="./images/favicon0.webp">
     <script src="bouton.js"></script> 
 </head>
 
