--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -59,6 +59,11 @@
         </div>
     </section>
 
+    <div class="video-container">
+    <video controls width="600">
+        <source src="images/muskivid.mp4" type="video/mp4">
+    </video>
+    </div>
 </main>
 
 <footer class="header">
