--- a/MUSKI/epaules.html
+++ b/MUSKI/epaules.html
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <a href="index.html" class="nav-link">ACCUEIL</a>
             <div class="logo">
-                <img src="./images/logo.png" alt="Muski logo">
+                <img src="./images/logo.webp" alt="Muski logo">
             </div>
             <a href="contact.html" class="nav-link">CONTACT</a>
         </div>
