--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -14,7 +14,7 @@
 <header class="header">
     <nav class="navbar">
         <a href="index.html" class="link">ACCUEIL</a>
-        <img src="./images/logo.png" alt="Logo de Muski" class="logo">
+        <img src="./images/logo.webp" alt="Logo de Muski" class="logo">
         <a href="contact.html" class="link">CONTACT</a>
     </nav>
 </header>
@@ -33,7 +33,7 @@
         <div class="cadre">
             
             <!-- Image de base -->
-            <img src="./images/goku.png" alt="Image de Goku" class="base">
+            <img src="./images/goku.webp" alt="Image de Goku" class="base">
 
             <!-- MUSCLES CLIQUABLES -->
             <a href="bras.html">
