--- a/MUSKI/jambes.html
+++ b/MUSKI/jambes.html
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <a href="index.html" class="link-button">ACCUEIL</a>
             <div class="logo">
-                <img src="./images/logo.png" alt="Muski logo">
+                <img src="./images/logo.webp" alt="Muski logo">
             </div>
             <a href="contact.html" class="link-button">CONTACT</a>
         </div>
