--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -13,9 +13,9 @@
 
 <header class="header">
     <nav class="navbar">
-        <a href="index.html" class="link">ACCUEIL</a>
-        <img src="./images/logo.png" alt="Logo de Muski" class="logo">
-        <a href="contact.html" class="link">CONTACT</a>
+        <a href="index.html" class="button">ACCUEIL</a>
+        <img src="./images/logo.png" alt="Logo de Muski" class="logo" fetchpriority=high>
+        <a href="contact.html" class="button">CONTACT</a>
     </nav>
 </header>
 
@@ -33,27 +33,27 @@
         <div class="cadre">
             
             <!-- Image de base -->
-            <img src="./images/goku.png" alt="Image de Goku" class="base">
+            <img src="./images/goku.png" alt="Image de Goku" class="base" fetchpriority=high>
 
             <!-- MUSCLES CLIQUABLES -->
             <a href="bras.html">
-                <img src="./images/bras.webp" alt="Muscle des bras" class="muscle bras">
+                <img src="./images/bras.webp" alt="Muscle des bras" class="muscle bras" fetchpriority=high>
             </a>
             
             <a href="epaules.html">
-                <img src="./images/épaules0.png" alt="Muscle des épaules" class="muscle epaules">
+                <img src="./images/épaules0.png" alt="Muscle des épaules" class="muscle epaules" fetchpriority=high>
             </a>
 
             <a href="jambes.html">
-                <img src="./images/jambes.png" alt="Muscle des jambes" class="muscle jambes">
+                <img src="./images/jambes.png" alt="Muscle des jambes" class="muscle jambes" fetchpriority=high>
             </a>
 
             <a href="buste.html">
-                <img src="./images/buste.png" alt="Muscle du buste" class="muscle buste">
+                <img src="./images/buste.png" alt="Muscle du buste" class="muscle buste" fetchpriority=high>
             </a>
 
             <a href="cardio.html">
-                <img src="./images/cardios.png" alt="Muscle du cardio" class="muscle cardio">
+                <img src="./images/cardios.png" alt="Muscle du cardio" class="muscle cardio" fetchpriority=high>
             </a>
 
         </div>
@@ -61,7 +61,7 @@
 
     <div class="video-container">
     <video controls width="600">
-        <source src="images/muskivid.mp4" type="video/mp4">
+        <source src="images/muskivid.mp4" type="video/mp4" fetchpriority=high>
     </video>
     </div>
 </main>
@@ -89,7 +89,7 @@
             </div>
             <div class="text-colonne">
                 <h2>Fonctionnalités</h2>
-                <p><a href="#top" class="link" title="Revenir en haut de page">Revenir en haut</a></p>
+                <p><a href="#top" class="button" title="Revenir en haut de page">Revenir en haut</a></p>
                 <br>
                 <p><button id="toggle-theme" class="button">Changer de thème</button></p>
             </div>
