fusion des styles et vidéo centré

--- a/MUSKI/contact.html
+++ b/MUSKI/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Muski - Contact</title>
     <meta name="description" content="Contactez l'équipe Muski pour donner vos impressions sur le site, poser des questions ou envoyer des suggestions.">
-    <link id="theme" rel="stylesheet" href="styles/style_noir.css">
+    <link id="theme" rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="./images/favicon0.webp">
     <script src="bouton.js"></script> 
 </head>
