--- a/MUSKI/epaules.html
+++ b/MUSKI/epaules.html
@@ -4,7 +4,7 @@
     <title>Épaules</title>
     <meta charset="utf-8">
     <meta name="description" content="Tout savoir sur l'anatomie des épaules (deltoïdes, coiffe des rotateurs, trapèzes). Découvrez les meilleurs exercices pour la stabilité, la force et un physique harmonieux.">
-    <link id="theme" rel="stylesheet" href="styles/style_noir.css">
+    <link id="theme" rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="./images/favicon0.webp">
     <script src="bouton.js"></script>
 </head>
