--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -33,7 +33,7 @@
         <div class="cadre">
             
             <!-- Image de base -->
-            <img src="./images/goku.png" alt="Image de Goku" class="base">
+            <img src="./images/goku.webp" alt="Image de Goku" class="base" fetchpriority=high>
 
             <!-- MUSCLES CLIQUABLES -->
             <a href="bras.html">
@@ -58,11 +58,11 @@
 
         </div>
     </section>
-
-    <div class="video-container">
-    <video controls width="600">
-        <source src="images/muskivid.mp4" type="video/mp4" fetchpriority=high>
-    </video>
+    <div class="video-container"> 
+        <video controls>
+            <source src="images/muskivid.mp4" type="video/mp4" fetchpriority="high">
+                Votre navigateur ne supporte pas la balise vidéo.
+        </video>
     </div>
 </main>
 
