pages qui prennent en charge le changement de thème

--- a/MUSKI/bras.html
+++ b/MUSKI/bras.html
@@ -11,11 +11,11 @@
 <body>
     <header class="header">
         <div class="nav-container">
-            <a href="index.html" class="link-button">ACCUEIL</a>
+            <a href="index.html" class="button">ACCUEIL</a>
             <div class="logo">
                 <img src="./images/logo.webp" alt="Muski logo">
             </div>
-            <a href="contact.html" class="link-button">CONTACT</a>
+            <a href="contact.html" class="button">CONTACT</a>
         </div>
 
     </header>
@@ -149,7 +149,7 @@
             </div>
             <div class="text-colonne">
                 <h3>Fonctionnalités</h3>
-                <p><a href="#top" class="link-button" title="Revenir en haut de page">Revenir en haut</a></p>
+                <p><a href="#top" class="button" title="Revenir en haut de page">Revenir en haut</a></p>
                 <p><button id="toggle-theme" class="button">Changer de thème</button></p>
             </div>
         </div>
