--- a/MUSKI/jambes.html
+++ b/MUSKI/jambes.html
@@ -11,11 +11,11 @@
 <body>
     <header class="header">
         <div class="nav-container">
-            <a href="index.html" class="link-button">ACCUEIL</a>
+            <a href="index.html" class="button">ACCUEIL</a>
             <div class="logo">
                 <img src="./images/logo.webp" alt="Muski logo">
             </div>
-            <a href="contact.html" class="link-button">CONTACT</a>
+            <a href="contact.html" class="button">CONTACT</a>
         </div>
     </header>
 
@@ -50,10 +50,10 @@
                 
                 <table class="exercices-table">
                     <tr>
-                        <th style="text-align:left;">Groupe musculaire</th>
-                        <th>Localisation</th>
-                        <th>Fonction principale</th>
-                        <th>Exercices clefs</th>
+                        <th><strong>Groupe musculaire</strong></th>
+                        <th><strong>Localisation</strong></th>
+                        <th><strong>Fonction principale</strong></th>
+                        <th><strong>Exercices clefs</strong></th>
                     </tr>
                     <tr>
                         <td>Quadriceps</td>
@@ -179,7 +179,7 @@
             </div>
             <div class="text-colonne">
                 <h3>Fonctionnalités</h3>
-                <p><a href="#top" class="link-button" title="Revenir en haut de page">Revenir en haut</a></p>
+                <p><a href="#top" class="button" title="Revenir en haut de page">Revenir en haut</a></p>
                 <p><button id="toggle-theme" class="button">Changer de thème</button></p>
             </div>
         </div>
