bouton fonctionnel enfin

--- a/MUSKI/cardio.html
+++ b/MUSKI/cardio.html
@@ -4,9 +4,9 @@
     <title>Cardio</title>
     <meta charset="utf-8">
     <meta name="description" content="Maîtrisez les machines de cardio ergométriques : Skierg, Rower, Bike Erg et Echobike. Guide détaillé des techniques et astuces de pro pour maximiser votre effort.">
-    <link id="theme" rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="./images/favicon0.webp">
-    <script src="js/bouton.js"></script>
+    <script src="js/bouton.js" defer></script>
 </head>
 <body>
     <header class="header">
