--- a/MUSKI/jambes.html
+++ b/MUSKI/jambes.html
@@ -4,7 +4,7 @@
     <title>Jambes</title>
     <meta charset="utf-8">
     <meta name="description" content="Guide essentiel pour le 'Leg Day' : Anatomie des jambes, principes de base (squat, soulevé de terre), erreurs courantes et conseils nutritionnels pour la récupération.">
-    <link id="theme" rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="./images/favicon0.webp">
     <script src="js/bouton.js" defer></script>
 </head>
