--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -4,9 +4,9 @@
     <title>Buste</title>
     <meta charset="utf-8">
     <meta name="description" content="Découvrez l'anatomie complète du buste (abdos, lombaires, fessiers) et leur rôle crucial dans la stabilité et la force. Trouvez les exercices clés pour le gainage.">
-    <link id="theme" rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="./images/favicon0.webp">
-    <script src="bouton.js"></script>
+    <script src="js/bouton.js" defer></script>
 </head>
 <body>
     <header class="header">
