--- a/MUSKI/contact.html
+++ b/MUSKI/contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Muski - Contact</title>
     <meta name="description" content="Contactez l'équipe Muski pour donner vos impressions sur le site, poser des questions ou envoyer des suggestions.">
-    <link id="theme" rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="./images/favicon0.webp">
-    <script src="js/bouton.js"></script> 
+    <script src="js/bouton.js" defer></script> 
 </head>
 
 <body>
