--- a/MUSKI/bras.html
+++ b/MUSKI/bras.html
@@ -23,7 +23,7 @@
     <div class="page-content">
         <div class="content-section section-texte-droite">
             <div class="illustration-colonne">
-                <img src="./images/goku bras.webp" alt="Schéma d'anatomie du bras" style="border-radius: 8px;">
+                <img src="./images/goku_bras.webp" alt="Schéma d'anatomie du bras" style="border-radius: 8px;">
             </div>
             <div class="text-colonne">
                 <h1>Bienvenue à l'entraînement de Goku</h1>
@@ -85,7 +85,7 @@
 
         <div class="content-section section-texte-droite">
             <div class="illustration-colonne">
-                <img src="./images/gymshark bras.webp" alt="Schéma des biceps (Gymshark)" style="border-radius: 8px;">
+                <img src="./images/gymshark_bras.webp" alt="Schéma des biceps (Gymshark)" style="border-radius: 8px;">
             </div>
 
             <div class="text-colonne">
