--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -53,7 +53,7 @@
 
         <div class="content-section section-texte-gauche">
             <div class="illustration-colonne">
-                <img src="./images/broly 2 (1).webp" alt="Schéma des groupes musculaires du buste">
+                <img src="./images/broly_2.webp" alt="Schéma des groupes musculaires du buste">
             </div>
             <div class="text-colonne">
                 <h2>Protection et Groupes Musculaires</h2>
