--- a/MUSKI/epaules.html
+++ b/MUSKI/epaules.html
@@ -22,7 +22,7 @@
     <div class="page-content">
         <div class="content-section section-texte-droite">
             <div class="illustration-colonne">
-                <img src="./images/trunks nrv.webp" alt="Schéma d'anatomie de l'épaule" style="border-radius: 8px;">
+                <img src="./images/trunks_nrv.webp" alt="Schéma d'anatomie de l'épaule" style="border-radius: 8px;">
             </div>
             <div class="text-colonne">
                 <h1>Bienvenue dans la ville future !</h1>
@@ -46,7 +46,7 @@
 
         <div class="content-section section-texte-gauche">
             <div class="illustration-colonne">
-                <img src="./images/trunks arvv.webp" alt="Illustration des exercices pour les épaules" style="border-radius: 8px;">
+                <img src="./images/trunks_arvv.webp" alt="Illustration des exercices pour les épaules" style="border-radius: 8px;">
             </div>
             <div class="text-colonne">
                 <h2>Comment muscler ses épaules ?</h2>
