--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -29,7 +29,7 @@
         </p>
     </section>
 
-    <section class="personnage-zone">
+    <div class="personnage-zone">
         <div class="cadre">
             
             <!-- Image de base -->
@@ -57,10 +57,10 @@
             </a>
 
         </div>
-    </section>
+    </div>
     <div class="video-container"> 
         <video controls>
-            <source src="images/muskivid.mp4" type="video/mp4" fetchpriority="high">
+            <source src="images/muskivid.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas la balise vidéo.
         </video>
     </div>
