--- a/MUSKI/cardio.html
+++ b/MUSKI/cardio.html
@@ -15,7 +15,7 @@
             <div class="logo">
                 <img src="./images/logo.webp" alt="Muski logo">
             </div>
-            <a href="contact.html" class="button"">CONTACT</a>
+            <a href="contact.html" class="button">CONTACT</a>
         </div>
     </header>
     <div class="page-content">
@@ -56,7 +56,7 @@
 
         <div class="content-section section-texte-droite">
             <div class="illustration-colonne">
-                <img src="./images/bike erg.avif" alt="Bike erg">
+                <img src="./images/bike_erg.avif" alt="Bike erg">
             </div>
             <div class="text-colonne">
                 <h2>Bike Erg</h2>
@@ -66,7 +66,7 @@
 
         <div class="content-section section-texte-gauche">
             <div class="illustration-colonne">
-                <img src="./images/assault bike.avif" alt="Echobike / Assault Bike">
+                <img src="./images/assault_bike.avif" alt="Echobike / Assault Bike">
             </div>
             <div class="text-colonne">
                 <h2>Echobike / Assault Bike</h2>
