--- a/MUSKI/epaules.html
+++ b/MUSKI/epaules.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Tout savoir sur l'anatomie des épaules (deltoïdes, coiffe des rotateurs, trapèzes). Découvrez les meilleurs exercices pour la stabilité, la force et un physique harmonieux.">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="./images/favicon0.webp">
-    <script src="bouton.js" defer></script>
+    <script src="js/bouton.js" defer></script>
 </head>
 <body>
     <header class="header">
