lien plus clair

--- a/MUSKI/cardio.html
+++ b/MUSKI/cardio.html
@@ -35,7 +35,7 @@
                 <p>Le skierg est un ergo (ergomètre) (machine de cardio) qui reprend le principe du ski où vous devez pousser avec des bâtons pour avancer. Ici, au Skierg, vous devez faire le mouvement le plus ample possible : allez chercher le plus haut possible pour bien descendre en quart de squat. Veuillez à garder votre dos droit et à gainer votre sangle abdominale pour rester bien fort.</p>
                 <p><strong>Petite astuce de pro :</strong> Aller chercher le plus haut possible et tirez en puissant. Callez votre respiration sur vos mouvements : vous expirez quand vous tirez et vous inspirez quand vous remontez, et ainsi de suite.</p>
                 <ul>
-                    <li>Source : <a href="https://muscu-street-et-crossfit.fr/le-skierg/">muscu-street-et-crossfit-le-skierg</a></li>
+                    <li>Source : <a href="https://muscu-street-et-crossfit.fr/le-skierg/" class="link">muscu-street-et-crossfit-le-skierg</a></li>
                 </ul>
             </div>
         </div>
@@ -49,7 +49,7 @@
                 <p>Le Rower ou le rameur en français fait aussi partie de la famille des ergos (machine de cardio). Pour effectuer une bonne traction au rameur, il faut d’abord pousser fort avec les jambes en gardant le dos droit et gainé. Ensuite, une fois les jambes presque complètement tendues, il faut tirer avec les bras en ramenant la poignée vers le bas du ventre, jamais vers le menton.</p>
                 <p>Lors du retour, la séquence est inversée : on tend d’abord les bras vers l’avant, puis on plie les jambes pour revenir en position initiale. Ce mouvement évite de forcer sur les genoux lorsque ceux-ci sont pliés tout en ramenant la poignée. Il est important de rester bien gainé durant tout l’exercice pour protéger le dos. Comme pour le Skierg, il faut synchroniser la respiration avec le mouvement : on expire en tirant la poignée vers soi (phase de puissance), et on inspire en revenant (phase de récupération).</p>
                 <ul>
-                    <li>Source : <a href="https://muscu-street-et-crossfit.fr/le-rameur/">muscu-street-et-crossfit-le-rameur</a></li>
+                    <li>Source : <a href="https://muscu-street-et-crossfit.fr/le-rameur/" class="link">muscu-street-et-crossfit-le-rameur</a></li>
                 </ul>
             </div>
         </div>
@@ -73,7 +73,7 @@
                 <p>L'Echobike, ou Assault Bike, est l'un des ergos les plus cardio de cette liste. L'Echobike reprend le principe du vélo, mais ici nous ajoutons un mouvement au niveau des bras. Pour bien exécuter cet exercice, vous devez pousser fort sur une jambe et tirer fort sur le bras opposé en même temps pour développer davantage de force.</p>
                 <p>Le réglage de la selle se fait à hauteur de hanche. Pour la respiration, pensez à bien expirer lorsque vous poussez avec les jambes et à inspirer lors du mouvement de retour.</p>
                 <ul>
-                    <li>Source : <a href="https://www.docteur-fitness.com/assault-air-bike/">docteur-fitness-assault-air-bike</a></li>
+                    <li>Source : <a href="https://www.docteur-fitness.com/assault-air-bike/" class="link">docteur-fitness-assault-air-bike</a></li>
                 </ul>
             </div>
         </div>
